--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html{
   height: 100%;
 }
-body {
+#body {
   margin: 0;
   padding: 0;
   width: 100%;
@@ -129,7 +129,7 @@ font-size: 25px;
   top: 30%;
   width: 50%;
 }
-.btn {
+.mybtn {
   height: 40px;
   width: 200px;
   background-color: black;
@@ -138,9 +138,10 @@ font-size: 25px;
   top: 80%;
   left: 17%;
 }
-.btn:hover {
+.mybtn:hover {
   background-color: #00D1FF;
   color: black;
+  cursor: pointer;
   transition: 0.5s;
   font-weight: 890;
   animation-timing-function: ease-in-out;
@@ -151,12 +152,12 @@ font-size: 25px;
     width: 500px;
     z-index: 2
   }
-  .btn {
+  .mybtn {
     position: relative;
-    top: 80%;
+    top: 0%;
     left: 3%;
   }
-  .btn:hover {
+  .mybtn:hover {
     background-color: #00D1FF;
     color: black;
     transition: 0.5s;
@@ -165,14 +166,17 @@ font-size: 25px;
   }
   #intro {
     width: 500px;
-    background-image: url(images/rimg.png);
+    /* background-image: url(images/rimg.png); */
     background-size: cover;
     background-blend-mode: color-burn;
 
   }
   #intro img {
-    display: none;
-    z-index: 1;
+    position: relative;
+    left: 10px;
+    width: 500px;
+    height: 80%;
+    opacity: 0.5;
   }
 
 }
@@ -184,7 +188,7 @@ font-size: 25px;
 #About {
   /* text-align: center; */
   width: 100%;
-  height: 600px;
+  height: 650px;
   z-index: 2;
 }
 .about {
@@ -228,13 +232,16 @@ padding-right: 100px;
 @media only screen and (max-width: 600px) {
   #About {
     width: 500px;
-    height: auto;
+    height: 600px;;
   }
   #About p {
     padding-left: 20px;
     padding-right: 20px;
     position: relative;
     top: 250px;
+  }
+  #body {
+    overflow-x: hidden;
   }
   #About img {
     position: relative;
@@ -246,11 +253,88 @@ padding-right: 100px;
     top: 300px;
     left: 30%;
   }
-  .btn:hover {
+  .mybtn:hover {
     background-color: #00D1FF;
     color: black;
     transition: 0.5s;
     font-weight: 890;
     animation-timing-function: ease-in-out;
   }
+}
+
+
+
+
+#skills {
+  width: 100%;
+  height: 600px;
+
+}
+.field {
+  font-size: 25px;
+  font-family: 'Ink Free';
+}
+.field-description {
+  font-family: 'Ink Free';
+}
+
+.mycol {
+  padding: 10px;
+}
+
+@media only screen and (max-width: 600px) {
+  #skills {
+    position: relative;
+    top: 280px;
+    width: 100%;
+    height: 600px;
+  }
+  #skills .container {
+    padding-left: 40px;
+  }
+
+}
+
+
+
+
+/* project section */
+
+
+#projects {
+    width: 500px;
+    height: 600px;
+}
+.project {
+  border: 2px solid #00D1FF;
+  border-radius: 55px;
+  height: 100px;
+  width: 1000px;
+}
+.project-name {
+  font-family: 'Ink Free';
+  font-size: 30px;
+  /* position: relative;
+  top: -41px;
+  left: 50%; */
+}
+.project-decription {
+  font-family: 'Ink Free';
+  font-size: 20px;
+  /* position: relative;
+  top: -55px;
+  left: 47%; */
+}
+.project-logo {
+  height: 80px;
+  width: 80px;
+  border-radius: 100%;
+  position: relative;
+  left: 30px;
+  top: 10px;
+}
+.project span {
+  position: relative;
+  top: 10px;
+  float: inherit;
 }
