--- a/style.css
+++ b/style.css
@@ -302,7 +302,7 @@ padding-right: 100px;
 
 
 #projects {
-    width: 500px;
+    width: 1000px;
     height: 600px;
 }
 .project {
@@ -314,16 +314,21 @@ padding-right: 100px;
 .project-name {
   font-family: 'Ink Free';
   font-size: 30px;
-  /* position: relative;
-  top: -41px;
-  left: 50%; */
+  position: relative;
+  top: -64px;
+  left: 40%;
+  width: 130px;
+  height: 45px;
+  margin: 0px;
 }
 .project-decription {
   font-family: 'Ink Free';
   font-size: 20px;
-  /* position: relative;
-  top: -55px;
-  left: 47%; */
+  position: relative;
+  top: -70px;
+  left: 37%;
+  width: 230px;
+  height: 30px;
 }
 .project-logo {
   height: 80px;
@@ -333,8 +338,29 @@ padding-right: 100px;
   left: 30px;
   top: 10px;
 }
-.project span {
+.goto {
   position: relative;
-  top: 10px;
-  float: inherit;
+  top: -136px;
+  left: 80%;
 }
+.goto:hover {
+  color: #00e1FF;
+}
+
+@media only screen and (max-width: 600px) {
+  #projects {
+    position: relative;
+    top: 340px;
+  }
+  .project {
+    border: 2px solid #00D1FF;
+    border-radius: 55px;
+    height: 100px;
+    width: 480px;
+  }
+  .project-name {
+    font-size: 25px;
+  }
+  .project-decription {
+    font-size: 15px;
+  }
