--- a/style.css
+++ b/style.css
@@ -77,8 +77,7 @@ border: 1px solid #000000;
 #intro {
   text-align: center;
   width: 100%;
-  height: 550px;
-  z-index: 1;
+  height: 100vh;
 }
 
 #intro span:nth-child(1) {
@@ -188,8 +187,7 @@ font-size: 25px;
 #About {
   /* text-align: center; */
   width: 100%;
-  height: 650px;
-  z-index: 2;
+  height: 100vh;
 }
 .about {
   font-family: 'Ink Free';
@@ -267,8 +265,11 @@ padding-right: 100px;
 
 #skills {
   width: 100%;
-  height: 600px;
+  height: 100vh;
 
+}
+#skills .container {
+  margin-top: 123px;
 }
 .field {
   font-size: 25px;
@@ -302,14 +303,15 @@ padding-right: 100px;
 
 
 #projects {
-    width: 1000px;
-    height: 600px;
+    width: 100%;
+    height: 100vh;
 }
 .project {
   border: 2px solid #00D1FF;
   border-radius: 55px;
   height: 100px;
   width: 1000px;
+  margin-top: 60px;
 }
 .project-name {
   font-family: 'Ink Free';
@@ -363,4 +365,7 @@ padding-right: 100px;
   }
   .project-decription {
     font-size: 15px;
+  }
+  .goto {
+    display: none;
   }
