--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+@font-face {
+  src: url(fonts/Ink Free.ttf);
+  font-family: Ink Free;
+}
+
 html{
   height: 100%;
 }
@@ -53,11 +58,13 @@ color: #00D1FF;
 
 border: 1px solid #000000;
 }
-.list-item:hover {
-  color: #00D1FF;
-  transform: skewX(25deg);
+.list-link:hover {
+  color: grey;
   transition: 0.5s;
   transition-timing-function: linear;
+}
+.list-item:hover {
+
 }
 @media only screen and (max-width: 600px) {
   .list {
@@ -237,6 +244,7 @@ padding-right: 100px;
     padding-right: 20px;
     position: relative;
     top: 250px;
+    font-size: 20px;
   }
   #body {
     overflow-x: hidden;
@@ -285,10 +293,8 @@ padding-right: 100px;
 
 @media only screen and (max-width: 600px) {
   #skills {
-    position: relative;
-    top: 280px;
     width: 100%;
-    height: 600px;
+    height: 100vh;
   }
   #skills .container {
     padding-left: 40px;
@@ -351,8 +357,9 @@ padding-right: 100px;
 
 @media only screen and (max-width: 600px) {
   #projects {
-    position: relative;
-    top: 340px;
+    margin-top: 20%;
+    height: 100vh;
+    width: 100%;
   }
   .project {
     border: 2px solid #00D1FF;
