--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
   src: url(fonts/Ink Free.ttf);
-  font-family: Ink Free;
+  font-family: 'Ink Free';
 }
 
 html{
@@ -272,6 +272,7 @@ padding-right: 100px;
 
 
 #skills {
+
   width: 100%;
   height: 100vh;
 
@@ -286,13 +287,18 @@ padding-right: 100px;
 .field-description {
   font-family: 'Ink Free';
 }
-
+svg {
+  float: right;
+}
 .mycol {
+  width: 100px;;
   padding: 10px;
+
 }
 
 @media only screen and (max-width: 600px) {
   #skills {
+    margin-top: 13%;
     width: 100%;
     height: 100vh;
   }
