--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 @font-face {
   src: url(fonts/Ink Free.ttf);
   font-family: 'Ink Free';
+  src: url(fonts/DancingScript.ttf);
+  font-family: 'DancingScript';
 }
 
 html{
@@ -16,6 +18,11 @@ html{
   color: #00D1FF;
   overflow-x: hidden;
 
+}
+@media only screen and (max-width: 600px) {
+  #body {
+    font-family: 'DancingScript'
+  }
 }
 nav {
   width: 100%;
@@ -287,11 +294,9 @@ padding-right: 100px;
 .field-description {
   font-family: 'Ink Free';
 }
-svg {
-  float: right;
-}
+
 .mycol {
-  width: 100px;;
+  width: 50px;
   padding: 10px;
 
 }
