--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
-  src: url(fonts/Ink Free.ttf);
-  font-family: 'Ink Free';
+  src: url(fonts/Courgette.ttf);
+  font-family: 'Courgette';
   src: url(fonts/DancingScript.ttf);
   font-family: 'DancingScript';
 }
@@ -21,7 +21,7 @@ html{
 }
 @media only screen and (max-width: 600px) {
   #body {
-    font-family: 'DancingScript'
+    font-family: 'Courgette', cursive;
   }
 }
 nav {
@@ -29,18 +29,18 @@ nav {
   align-items: center;
 }
 .r {
-  font-family: 'Ink Free';
+  font-family: 'Courgette';
 font-style: normal;
-font-weight: 400;
+font-weight: 300;
 font-size: 100px;
 color: #00D1FF;
 padding-left: 5px;
 padding-top: 5px;
 }
 .aghul {
-  font-family: 'Ink Free';
+  font-family: 'Courgette';
 font-style: normal;
-font-weight: 400;
+font-weight: 300;
 font-size: 50px;
 color: #00D1FF;
 padding-top: 5px;
@@ -57,9 +57,9 @@ padding-top: 5px;
 }
 .list-link {
   text-decoration: none;
-  font-family: 'Ink Free';
+  font-family: 'Courgette';
 font-style: normal;
-font-weight: 400;
+font-weight: 300;
 font-size: 20px;
 color: #00D1FF;
 
@@ -95,24 +95,24 @@ border: 1px solid #000000;
 }
 
 #intro span:nth-child(1) {
-  font-family: 'Ink Free';
+  font-family: 'Courgette';
 font-style: normal;
-font-weight: 400;
+font-weight: 300;
 font-size: 80px;
 
 }
 #intro span:nth-child(2) {
-  font-family: 'Ink Free';
+  font-family: 'Courgette';
 font-style: normal;
-font-weight: 400;
+font-weight: 300;
 font-size: 80px;
 display: list-item;
 
 }
 #intro span:nth-child(3) {
-  font-family: 'Ink Free';
+  font-family: 'Courgette';
 font-style: normal;
-font-weight: 400;
+font-weight: 300;
 font-size: 25px;
 
 }
@@ -204,9 +204,9 @@ font-size: 25px;
   height: 100vh;
 }
 .about {
-  font-family: 'Ink Free';
+  font-family: 'Courgette';
 font-style: normal;
-font-weight: 400;
+font-weight: 300;
 font-size: 50px;
 padding: 0px;
 position: relative;
@@ -224,9 +224,9 @@ top: 0px;
 
 }
 #About p {
-  font-family: 'Ink Free';
+  font-family: 'Courgette';
 font-style: normal;
-font-weight: 400;
+font-weight: 300;
 font-size: 30px;
 display: flex;
 align-items: center;
@@ -289,10 +289,10 @@ padding-right: 100px;
 }
 .field {
   font-size: 25px;
-  font-family: 'Ink Free';
+  font-family: 'Courgette';
 }
 .field-description {
-  font-family: 'Ink Free';
+  font-family: 'Courgette';
 }
 
 .mycol {
@@ -331,7 +331,7 @@ padding-right: 100px;
   margin-top: 60px;
 }
 .project-name {
-  font-family: 'Ink Free';
+  font-family: 'Courgette';
   font-size: 30px;
   position: relative;
   top: -64px;
@@ -341,7 +341,7 @@ padding-right: 100px;
   margin: 0px;
 }
 .project-decription {
-  font-family: 'Ink Free';
+  font-family: 'Courgette';
   font-size: 20px;
   position: relative;
   top: -70px;
